Task 7 Added package service, Added GroupDao, added StudentDao, fixed scripts